RSL-34: done with footer alignment && header fixed position on scroll

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,11 +1,12 @@
 .App__wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: center;
-}
+  min-height: 100%;
 
-.PageRoutes {
-  align-self: center;
+  &-component {
+    flex: 1 0 auto;
+    width: 100%;
+  }
 }
 
